# type_forge

./: CONTRIBUTING.md  LICENSE  README.md  code_polish.md  initial_reference.py  initial_test_reference.py  pyproject.toml  setup.cfg  sphinx_config.py  sphinx_main,py
docs/: .readthedocs.yaml  build_docs.sh  conf.py  getting_started.md  index.md
docs/_build/html/: .buildinfo  genindex.html  getting_started.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_build/html/.doctrees/: getting_started.doctree  index.doctree
docs/_build/html/.doctrees/_templates/autoapi/python/: class.doctree  module.doctree
docs/_build/html/.doctrees/api/: forge.doctree  index.doctree  validators.doctree
docs/_build/html/.doctrees/autoapi/: index.doctree
docs/_build/html/.doctrees/autoapi/src/type_forge/: index.doctree
docs/_build/html/.doctrees/autoapi/type_forge/: index.doctree
docs/_build/html/.doctrees/autoapi/type_forge/core/: index.doctree
docs/_build/html/.doctrees/autoapi/type_forge/forge/: index.doctree
docs/_build/html/.doctrees/autoapi/type_forge/typing/: index.doctree
docs/_build/html/.doctrees/autoapi/type_forge/utils/: index.doctree
docs/_build/html/.doctrees/autoapi/type_forge/validators/: index.doctree
docs/_build/html/.doctrees/examples/: basic_usage.doctree  custom_validators.doctree
docs/_build/html/_modules/: index.html
docs/_build/html/_modules/type_forge/: forge.html
docs/_build/html/_modules/type_forge/core/: base.html  exceptions.html
docs/_build/html/_modules/type_forge/forge/: type_forge.html
docs/_build/html/_modules/type_forge/typing/: aliases.html  analysis.html  conversion.html  definitions.html  hints.html  mapping.html  naming.html  protocols.html  standardization.html  validation.html  variables.html
docs/_build/html/_modules/type_forge/utils/: collection_manipulation.html  string_format.html
docs/_build/html/_modules/type_forge/validators/: basic.html  composite.html  factory.html
docs/_build/html/_sources/: index.md.txt
docs/_build/html/_sources/autoapi/: index.rst.txt
docs/_build/html/_sources/autoapi/type_forge/forge/: index.rst.txt
docs/_build/html/_sources/examples/: custom_validators.md.txt
docs/_build/html/api/: forge.html  index.html  validators.html
docs/_build/html/autoapi/: index.html
docs/_build/html/autoapi/type_forge/: index.html
docs/_build/html/autoapi/type_forge/core/: index.html
docs/_build/html/autoapi/type_forge/forge/: index.html
docs/_build/html/autoapi/type_forge/typing/: index.html
docs/_build/html/autoapi/type_forge/utils/: index.html
docs/_build/html/autoapi/type_forge/validators/: index.html
docs/_build/html/examples/: basic_usage.html  custom_validators.html
docs/_static/: custom.css
docs/_templates/autoapi/python/: class.rst  module.rst
docs/api/: forge.md  index.md  validators.md
docs/autoapi/src/type_forge/: index.rst
docs/autoapi/src/type_forge/core/: index.rst
docs/autoapi/src/type_forge/core/base/: index.rst
docs/autoapi/src/type_forge/core/exceptions/: index.rst
docs/autoapi/src/type_forge/forge/: index.rst
docs/autoapi/src/type_forge/forge/type_forge/: index.rst
docs/autoapi/src/type_forge/typing/: index.rst
docs/autoapi/src/type_forge/typing/aliases/: index.rst
docs/autoapi/src/type_forge/typing/analysis/: index.rst
docs/autoapi/src/type_forge/typing/conversion/: index.rst
docs/autoapi/src/type_forge/typing/definitions/: index.rst
docs/autoapi/src/type_forge/typing/hints/: index.rst
docs/autoapi/src/type_forge/typing/mapping/: index.rst
docs/autoapi/src/type_forge/typing/naming/: index.rst
docs/autoapi/src/type_forge/typing/protocols/: index.rst
docs/autoapi/src/type_forge/typing/standardization/: index.rst
docs/autoapi/src/type_forge/typing/validation/: index.rst
docs/autoapi/src/type_forge/typing/variables/: index.rst
docs/autoapi/src/type_forge/utils/: index.rst
docs/autoapi/src/type_forge/utils/collection_manipulation/: index.rst
docs/autoapi/src/type_forge/utils/string_format/: index.rst
docs/autoapi/src/type_forge/validators/: index.rst
docs/autoapi/src/type_forge/validators/basic/: index.rst
docs/autoapi/src/type_forge/validators/composite/: index.rst
docs/autoapi/src/type_forge/validators/factory/: index.rst
docs/autoapi/type_forge/: index.rst
docs/autoapi/type_forge/core/: index.rst
docs/autoapi/type_forge/core/base/: index.rst
docs/autoapi/type_forge/core/exceptions/: index.rst
docs/autoapi/type_forge/forge/: index.rst
docs/autoapi/type_forge/forge/type_forge/: index.rst
docs/autoapi/type_forge/typing/: index.rst
docs/autoapi/type_forge/typing/aliases/: index.rst
docs/autoapi/type_forge/typing/analysis/: index.rst
docs/autoapi/type_forge/typing/conversion/: index.rst
docs/autoapi/type_forge/typing/definitions/: index.rst
docs/autoapi/type_forge/typing/hints/: index.rst
docs/autoapi/type_forge/typing/mapping/: index.rst
docs/autoapi/type_forge/typing/naming/: index.rst
docs/autoapi/type_forge/typing/protocols/: index.rst
docs/autoapi/type_forge/typing/validation/: index.rst
docs/autoapi/type_forge/typing/variables/: index.rst
docs/autoapi/type_forge/utils/string_format/: index.rst
docs/autoapi/type_forge/validators/: index.rst
docs/autoapi/type_forge/validators/composite/: index.rst
docs/autoapi/type_forge/validators/factory/: index.rst
docs/examples/: basic_usage.md
examples/: basic_usage.py  create_person.py  custom_validators.py
llm_forge_proto/: reasoning_llm.py
src/type_forge/: __init__.py
src/type_forge/core/: __init__.py  base.py  exceptions.py
src/type_forge/forge/: __init__.py  type_forge.py
src/type_forge/typing/: __init__.py  aliases.py  analysis.py  conversion.py  definitions.py  hints.py  mapping.py  naming.py  protocols.py  standardization.py  validation.py  variables.py
src/type_forge/utils/: collection_manipulation.py  string_format.py
src/type_forge/validators/: __init__.py  basic.py  composite.py  factory.py
tests/: test_core.py  test_forge.py  test_validators.py
(+70 files in other folders)
