[metadata]
name = type_forge
version = 0.1.0
description = A robust type validation framework with dynamic functionality.
author = Lloyd Handyside
author_email = ace1928@gmail.com
url = https://github.com/Ace1928/type_forge
license = MIT
long_description = file: README.md
long_description_content_type = text/markdown
packages = find:
python_requires = >=3.7
install_requires =
    typing-extensions; python_version < "3.8"
    # Add other dependencies here

[options.packages.find]
where = src

[options]
package_dir =
    = src

[options.extras_require]
testing =
    pytest
    pytest-cov

[options.entry_points]
console_scripts =
    type_forge = type_forge.__main__:main

[flake8]
max-line-length = 88
extend-ignore = E203, E266, E501, W503
exclude = .git,__pycache__,docs,build,dist

[tool:pytest]
testpaths = tests
python_files = test_*.py
python_classes = *Tests
python_functions = test_*
