[metadata]
name = type_forge
version = 0.1.0
description = A robust type validation framework with dynamic functionality.
author = Lloyd Handyside
author_email = ace1928@gmail.com
url = https://github.com/Ace1928/type_forge
license = MIT
long_description = file: README.md
long_description_content_type = text/markdown
keywords = type, validation, dynamic, forge, eidosian
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Typing :: Typed
project_urls =
    Homepage = https://github.com/Ace1928/type_forge
    Repository = https://github.com/Ace1928/type_forge

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8
install_requires =
    typing-extensions>=4.5.0
    typeguard>=4.0.0
    pydantic>=2.0.0
    attrs>=23.1.0
    cattrs>=23.1.0

[options.packages.find]
where = src

[options.extras_require]
dev =
    pytest>=7.3.1
    pytest-cov>=4.1.0
    mypy>=1.3.0
    black>=23.3.0
    ruff>=0.0.267
    isort>=5.12.0
    pre-commit>=3.3.2
    commitizen>=3.2.2
testing =
    pytest>=7.3.1
    pytest-cov>=4.1.0
docs =
    mkdocs>=1.4.3
    mkdocs-material>=9.1.15
    mkdocstrings[python]>=0.22.0

[options.entry_points]
console_scripts =
    type-forge = type_forge.cli:main

[bdist_wheel]
universal = 0

[flake8]
max-line-length = 88
extend-ignore = E203, E266, E501, W503
exclude = .git,__pycache__,docs,build,dist

[tool:pytest]
minversion = 6.0
testpaths = tests
python_files = test_*.py
python_classes = *Tests
python_functions = test_*
addopts = --cov=type_forge --cov-report=term-missing --cov-report=xml -v

[tool:isort]
profile = black
line_length = 88

[mypy]
python_version = 3.8
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
strict_optional = true
